# home_work_20_2

./: README.md  data.json  product.json  pyproject.toml
django_project/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  urls.py  views.py
main/management/commands/: fill.py  fill_pd.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  contact.html  index.html  info.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
main/templatetags/: tags.py
materials/: urls.py  views.py
materials/migrations/: 0001_initial.py
materials/templates/materials/: material_confirm_delete.html  material_detail.html  material_list.html
static/css/: album.css
