[tool.poetry]
name = "djangoproject4"
version = "0.1.0"
description = ""
authors = ["sergey <serglapinofff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"